<resources>
    <!-- Titles -->
    <string name="app_name">Silent Reflection</string>
    <string name="title_activity_navigation">Reflections</string>
    <string name="title_activity_comments"></string>
    <string name="title_activity_drafts">Drafts</string>
    <string name="title_activity_archives">Archives</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_add_comment"></string>
    <string name="title_activity_add_reflection"></string>

    <!-- Static Texts -->
    <string name="hint_topic">Reflection Question</string>
    <string name="hint_comment">What are your thoughts?</string>
    <string name="hint_link">http://</string>
    <string name="today">Today</string>

    <!-- Navigation Drawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="menu_life">Overwhelms of Life</string>
    <string name="menu_reminder">Set Reminder</string>
    <string name="menu_drafts">Drafts</string>
    <string name="menu_invite">Send Invitations</string>
    <string name="menu_archives">Archives</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_help">Help &amp; Feedback</string>

    <!-- Comments Menu -->
    <string name="menu_open_link">Open Link</string>
    <string name="menu_archive">Archive</string>
    <string name="menu_share">Converse</string>
    <string name="menu_link">Link</string>
    <string name="menu_send">Send</string>

    <string name="large_text">
        This really great TED talk I came across, \'On Being Wrong\'.
        The speaker asks a very beautiful question - How does it feel to be wrong?
        Most people answered what I would have answered - dreadful, guilty, funny etc. But,
        then her take on it was really insightful. Rather than taking away from the speaker,
        how about you watch it and tell me what you think about how we as humans think about
        being wrong? This would be a fun little topic.
    </string>

    <!-- Firebase Preferences -->
    <string name="action_sign_in">Sign in with Google</string>
    <string name="user_id_field">User Id field</string>
    <string name="user_display_name_field">User Display Name</string>
    <string name="user_email">User Email</string>
    <string name="invitation_title">invitation title here</string>
    <string name="invitation_message">message here</string>


    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value" />
    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>

</resources>
